<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.brainyclockuser.ui.auth.AuthenticationViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".ui.auth.fragments.SignUpFragment">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_25dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:src="@drawable/nameone" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv1"
                style="@style/text_view_style"
                android:layout_gravity="left"
                android:layout_marginTop="@dimen/_25dp"
                android:gravity="left"
                android:text="@string/please_fill_in_the_details_to_create_nyour_account" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etFirstName"
                style="@style/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_32dp"
                android:hint="@string/first_name"
                app:placeholderText="John">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/textInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName|textCapWords"
                    android:maxLength="255"
                    android:text="@={viewmodel.strFirstName}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etLastName"
                style="@style/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_9dp"
                android:hint="@string/last_name"
                app:placeholderText="Galt">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/textInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName|textCapWords"
                    android:maxLength="255"
                    android:text="@={viewmodel.strLastName}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etEmail"
                style="@style/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_9dp"
                android:hint="@string/email"
                app:placeholderText="@string/enter_your_email_id">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/textInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:text="@={viewmodel.strEmail}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etCompanyId"
                style="@style/editText"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_9dp"
                android:hint="@string/company_id">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/textInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:text="@={viewmodel.strCompanyId}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etEmpId"
                style="@style/editText"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_9dp"
                android:hint="@string/employee_id">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/textInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:text="@={viewmodel.strEmpId}" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPassword"
                style="@style/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_9dp"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                app:helperTextEnabled="true"
                app:placeholderText="@string/minimum_8_characters">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/textInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text="@={viewmodel.strPassword}" />



            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8dp"
                android:textSize="12sp"
                android:textColor="@color/LighterGray"
                android:text="@string/password_helper_text"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etReenterPassword"
                style="@style/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_9dp"
                android:hint="@string/re_enter_password"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/textInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text="@={viewmodel.strReEnterPassword}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                style="@style/blue_button_style"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_51dp"
                android:onClick="@{()->viewmodel.onSignUp()}"
                android:text="@string/sign_up" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_login"
                style="@style/text_view_style"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_25dp"
                android:padding="@dimen/_5dp"
                android:text="@string/already_have_an_account_log_in"
                android:textColor="@color/grey"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_password" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</layout>