<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.settings.SettingsFragment">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            android:layout_marginTop="@dimen/_10dp"
            style="@style/text_view_style"
            android:text="Settings"
            android:padding="@dimen/_15dp"
            android:textColor="@color/grey"
            android:textSize="@dimen/_20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_right"
            app:layout_constraintTop_toTopOf="parent" />



        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_logout"
            style="@style/setting_menu_text"
            android:layout_marginTop="@dimen/_20dp"
            android:text="@string/logout"
            android:textColor="@color/grey"
            app:drawableLeftCompat="@drawable/ic_logout"
            app:drawableTint="@color/grey" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_change_password"
            style="@style/setting_menu_text"
            android:text="@string/change_password"

            android:textColor="@color/grey"
            app:drawableLeftCompat="@drawable/ic_change_password"
            app:drawableTint="@color/grey" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_bluetooth"
            style="@style/setting_menu_text"
            android:text="@string/bluetooth"
            android:textColor="@color/grey"

            app:drawableLeftCompat="@drawable/ic_bluetooth"
            app:drawableTint="@color/grey" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_notifications_amp_alerts"
            style="@style/setting_menu_text"
            android:text="@string/notifications_amp_alerts"

            android:textColor="@color/grey"
            app:drawableLeftCompat="@drawable/ic_notification"
            app:drawableTint="@color/grey" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>