<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="visibleIndex"
            type="Integer" />

        <variable
            name="viewmodel"
            type="com.brainyclockuser.ui.auth.AuthenticationViewModel" />

    </data>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.auth.fragments.ForgotPasswordFragment">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            app:title="@{@string/forgot_password}" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_25dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_150sdp"
                    android:src="@drawable/group" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_msg"
                    style="@style/text_view_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30dp"
                    android:gravity="center"
                    android:text="@{visibleIndex == 1 ? @string/msg_forgot_password_screen1 : @string/msg_forgot_password_screen2}"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_14sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/toolbar"
                    tools:text="@string/msg_forgot_password_screen1" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etEmail"
                    style="@style/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_13dp"
                    android:enabled="@{visibleIndex == 1}"
                    android:hint="@string/email"
                    app:placeholderText="eg. johndoe@mail.com">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/textInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:paddingVertical="@dimen/_13dp"
                        android:text="@={viewmodel.strEmail}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etCode"
                    style="@style/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_13dp"
                    android:enabled="@{visibleIndex == 2}"
                    android:maxLength="6"
                    android:hint="@string/enter_code_here"
                    app:placeholderText="123456">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/textInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="6"
                        android:paddingVertical="@dimen/_13dp"
                        android:text="@={viewmodel.strCode}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etPassword"
                    style="@style/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_13dp"
                    android:enabled="@{visibleIndex == 2}"
                    android:hint="@string/password"
                    app:endIconMode="password_toggle"
                    app:helperTextEnabled="true"
                    app:placeholderText="Include Uppercase, special char and digit">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/textInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:paddingVertical="@dimen/_13dp"
                        android:text="@={viewmodel.strPassword}" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password_helper_text"
                    android:textSize="@dimen/_8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etNewPassword" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_submit"
                    style="@style/blue_button_style"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_51dp"
                    android:paddingHorizontal="@dimen/_20dp"
                    android:text="@string/submit" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </ScrollView>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>